--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "uid": "https://github.com/insight/insight.renderers.default/",
     "name": "insight.renderers.default",
     "main": "./lib/pack-helper.js",
+    "version": "0.0.0",
     "directories": {
         "lib": "./lib"
     },
