--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "insight.renderers.default",
   "main": "./lib/pack-helper.js",
   "version": "0.0.1",
+  "private": true,
   "directories": {
     "lib": "./lib"
   },
